test/errors/return_undefined.li
fn test() {
    return println("This function returns undefined");
}

println(test());